--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,7 @@
+html, body, #root, .app, .main{
+  min-height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: "Plus Jakarta Sans", sans-serif;
